err/persistable.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cytoolz'...
Listing './lib/python3.5/site-packages/cytoolz/curried'...
Listing './lib/python3.5/site-packages/cytoolz/tests'...
Listing './lib/python3.5/site-packages/cytoolz-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/persistable'...
Compiling './lib/python3.5/site-packages/persistable/base.py'...
***   File "./lib/python3.5/site-packages/persistable/base.py", line 95
    file_loc=(self.persistload.workingdatapath / f"{class_name}.log"),
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/persistable/persistload.py'...
***   File "./lib/python3.5/site-packages/persistable/persistload.py", line 42
    self.logger.info(f"PERSISTING {fn_type}")
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/persistable/util'...
Compiling './lib/python3.5/site-packages/persistable/util/os_util.py'...
***   File "./lib/python3.5/site-packages/persistable/util/os_util.py", line 31
    fn_ext = f".{fn_ext}"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/persistable-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tlz'...
Listing './lib/python3.5/site-packages/toolz'...
Listing './lib/python3.5/site-packages/toolz/curried'...
Listing './lib/python3.5/site-packages/toolz/sandbox'...
Listing './lib/python3.5/site-packages/toolz/tests'...
Listing './lib/python3.5/site-packages/toolz-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/wrapt'...
Listing './lib/python3.5/site-packages/wrapt-1.10.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
